--- a/views/components/trip.pug
+++ b/views/components/trip.pug
@@ -7,8 +7,8 @@
         .d-flex.flex-column.align-items-center
         span.trip_time         
             i.fa-solid.fa-clock.me-1
-            span 10:00
-        span 1 saat 15 dakika
+            span
+        span
     p.trip_route
         |Çanakkale
         i.fa-solid.fa-route.mx-1
